<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Text1"
        android:text="@string/strText1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/Switch1"
        android:text="@string/strSW1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Text2"
        android:text="@string/strText2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:visibility="gone" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/RadioGroup1"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/RadioButton1"
            android:text="@string/strRB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RadioButton2"
            android:text="@string/strRB2" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RadioButton3"
            android:text="@string/strRB3" />
    </RadioGroup>

    <Button
        android:id="@+id/ButtonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strBtnExit"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/ButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strBtnBack"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/ImageView1"
        android:contentDescription="@string/strImageView"
        android:visibility="gone" />

</LinearLayout>